components/41-organisms/header/_header.scss
header.header {
  position: relative;
  margin-bottom: .3rem;
  padding: .3rem 0;

  // first row
  > .content-container {
    display: flex;
    align-items: center;

    @include tablet {
      flex-wrap: wrap;
    }

    > :not(:first-child) {
      margin-left: gutter();
    }

    .site-logo {
      margin-right: auto;

      &.subsite {
        flex: 1;
      }
    }

    .search {
      display: none;
      flex: 1;
      flex-wrap: nowrap;
      justify-content: flex-end;

      label {
        @extend %visually-hidden;
        @include bold-text;
      }

      input {
        margin-bottom: 0;
      }

      input[type=submit] {
        max-width: 0;
        padding: 0;
        transition: opacity .2s ease-in-out, max-width .2s ease-in-out, padding .2s ease-in-out;
        box-shadow: none;
        opacity: 0;

        &:focus {
          max-width: 9999px;
          margin-left: .4rem;
          padding: 0 1rem;
          opacity: 1;
        }
      }

      input[type=search],
      input[type=text] {
        flex: 0 1 auto;
        width: 100%;
        min-width: 0;
        max-width: 210px;
        margin-right: 0;
        transition: max-width .2s ease-in-out;

        &:invalid {
          box-shadow: none;
        }

        &:focus,
        &:valid {
          max-width: 440px;
          margin: 0 0 0 .4rem;

          ~ input[type=submit] {
            max-width: 9999px;
            margin-left: .4rem;
            padding: 0 1rem;
            opacity: 1;
          }

        }
      }

      @include tablet {
        display: flex;
      }
    }

    .search--link {
      @include theme('background-color', 'color-primary--lighten-5', 'header-search-background-color');

      display: block;
      min-width: 2.4rem;
      max-width: calc(.8rem + 32px);
      height: 2.4rem;
      border-bottom: 0;
      border-radius: border-radius('radius-1');
      background: svg-as-background('search', color('dark-gray'), 32, 32) no-repeat left .4rem center;
      text-indent: -9999px;
      overflow: hidden;

      @include tablet {
        display: none;
      }
    }

    .authentication {
      align-items: center;
      max-width: 210px;
      margin-left: .8rem;

      @include tablet {
        margin-left: gutter();
      }
    }

    .authentication,
    .language-switcher {
      align-self: stretch;
    }

    // Align main menu with site logo and breadcrumb.
    nav.menu {
      @include tablet {
        flex-basis: 100%;
        flex-grow: 1;
        order: 9999;
        margin-left: 0;
      }

      line-height: 1;
    }
  }

  .site-name {
    @include theme('color', 'color-tertiary', 'default-text-color');
    @include bold-text;

    @include tablet {
      display: none;
    }

    margin: .8rem 0 .4rem;
    font-size: .9rem;
  }

  nav.breadcrumb {
    margin-top: .4rem;
  }

  hr {
    $span: percentage(2 / 12);

    position: relative;
    max-width: $bp-max-content;
    margin-top: .3rem;
    margin-bottom: 2.3rem;
    border: 0;
    overflow: visible;

    &::before,
    &::after {
      @include theme('border-color', 'color-primary--lighten-4', 'header-border-bottom');

      position: absolute;
      top: 100%;
      width: 100%;
      height: 1rem;
      margin-top: .3rem;
      border-top: 2px solid;
      content: '';
    }

    &::before {
      left: -$gutter-width;
      width: 3rem + $gutter-width;
      border-right: 2px solid;
      border-top-right-radius: border-radius('radius-4');

      @include desktop {
        left: 0;
        width: calc(#{$span} + 2rem);
      }
    }

    &::after {
      right: -$gutter-width;
      width: calc(100% - 3rem + 2px + #{$gutter-width});
      border-left: 2px solid;
      border-top-left-radius: border-radius('radius-4');

      @include desktop {
        right: 0;
        width: calc(100% - #{$span} - 2rem + 2px);
      }
    }
  }

  // Hero image, overlaps and hides breadcrumb accolade.
  figure.hero {
    $span: percentage(2/12);

    display: none;
    position: relative;
    min-height: 1.6rem;
    // Give the image 1px margin relative to the container
    // so the accolade can overlap the edges
    // IE error fix
    margin: -1.7rem calc(-1rem + 1px) .3rem;

    @include tablet {
      display: block;
    }

    &.hero--mobile {
      display: block;

      &::before,
      &::after {
        content: '';
      }

      .image-wrapper,
      img {
        display: block;
      }
    }

    .theme {
      display: none;
      position: absolute;
      top: 0;
      right: 0;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 100%;
      margin: 0;
      padding: $gutter-width 2rem;
      text-align: center;
      z-index: z('hero', 'base');

      @include tablet {
        display: flex;
        width: span(4 wide of 12);
        max-width: 23rem;
        height: calc(100% - 1.6rem + 1px); // 1px to fix rendering issues
      }

      @include desktop {
        padding: 0 2rem;
      }

      @media (min-width: $bp-max-content) {
        right: calc((100% - #{$bp-max-content}) / 2);
      }

      &::before,
      &::after {
        @include theme('background-color', 'color-primary', 'hero-background-color');
        @include theme('border-color', 'color-primary', 'hero-background-color');
        position: absolute;
        left: 0;
        width: 100%;
        height: auto;
        border: 1px solid;
        content: '';
        opacity: .94;
        z-index: z('hero', 'overlay');
      }

      &.theme--light {
        &::before,
        &::after {
          @include theme('background-color', 'color-primary--lighten-5', 'hero-background-light-color');
          @include theme('border-color', 'color-primary--lighten-5', 'hero-background-light-color');
          opacity: 1;
        }

        h1 {
          @include theme('color', 'color-tertiary', 'hero-light-text-color');
        }
      }

      &::before {
        top: 0;
        bottom: 50%;
        border-bottom-left-radius: border-radius('radius-5');
      }

      &::after {
        top: 50%;
        bottom: 0;
        border-top-left-radius: border-radius('radius-5');
      }

      .theme-title {
        display: flex;
        flex-direction: column;
        justify-content: center;
        width: 100%;
        min-height: 100%;
      }

      img {
        display: inline-block;
        width: auto;
        height: 3rem;
        margin-bottom: 1rem;

        @include desktop {
          height: 4rem;
        }

        @media (min-width: $bp-max-content) {
          height: 5rem;
        }
      }

      figure:last-child {
        display: flex;
        flex: .6 1 auto;
        flex-direction: column;

        img {
          flex: 1 1 auto;
          margin-bottom: 0;
        }
      }

      h1 {
        @include theme('color', 'color-secondary', 'hero-text-color');

        margin: 0;
        font-size: 1.2rem;

        @include desktop {
          font-size: 1.6rem;
        }

        @media (min-width: $bp-max-content) {
          font-size: 2rem;
        }

        span {
          display: block;
          font-size: .9rem;

          @include desktop {
            font-size: 1.2rem;
          }

          @media (min-width: $bp-max-content) {
            font-size: 1.5rem;
          }
        }
      }
    }

    .image-wrapper {
      display: none;

      @include tablet {
        display: block;
      }
    }

    img {
      display: none;

      @include tablet {
        display: block;
      }
    }

    figcaption {
      @extend %content-container;
      display: none;
      right: 0;
      width: auto;

      @include tablet {
        display: block;
        position: absolute;
        top: calc(100% - 1.6rem);
        left: 3rem + $gutter-width;
        margin: 0;
        padding: .4rem $gutter-width 0;
        z-index: z('hero', 'caption');
      }

      @include desktop {
        left: calc(#{$span} + 2rem);
      }

      @media (min-width: $bp-max-content) {
        right: calc((100% - #{$bp-max-content}) / 2);
        left: calc(#{$span} + 2rem + (100% - #{$bp-max-content}) / 2);
        padding-right: 0;
      }
    }

    &::before,
    &::after {
      position: absolute;
      bottom: -.1rem;
      height: 1rem;
      background-color: color('white');
      content: none;
      z-index: z('hero', 'accolade');

      @include tablet {
        height: 1.7rem;
        content: '';
      }
    }

    &::before {
      left: 0;
      width: 4rem;
      border-top-right-radius: border-radius('radius-3');

      @include tablet {
        width: 3rem + $gutter-width;
        border-top-right-radius: border-radius('radius-5');
      }

      @include desktop {
        width: calc(#{$span} + 2rem);
      }

      @media (min-width: $bp-max-content) {
        width: calc(#{$span} + 2rem + ((100% - #{$bp-max-content}) / 2));
      }
    }

    &::after {
      right: 0;
      left: 4rem;
      width: auto;
      border-top-left-radius: border-radius('radius-3');

      @include tablet {
        left: 3rem + $gutter-width;
        border-top-left-radius: border-radius('radius-5');
      }

      @include desktop {
        left: calc(#{$span} + 2rem);
      }

      @media (min-width: $bp-max-content) {
        // Make sure it overlaps the image edges.
        // IE error fix
        right: -1px;
        left: calc(#{$span} + 2rem + ((100% - #{$bp-max-content}) / 2));
      }
    }

    &:not(.hero--subsite) .theme ~ figcaption {
      left: 0;
      width: 100%;
      max-width: none;
      background-color: color('white');

      @media (min-width: $bp-max-content) {
        width: auto;
      }
    }

    &--subsite {
      &::before,
      &::after {
        width: 100%;
      }
    }
  }

  &--menu > .content-container {
    > .authentication,
    > .language-switcher {
      @include tablet-and-below {
        display: none;
      }
    }
  }
}

